// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlOptimization/Overview render overview page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-xq3xuo"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center project-name-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#4583FF"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center database-type-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#15C7D4"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap"
          >
            优化概要
          </h5>
          <div
            class="ant-row"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0725431411 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0423139512 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_orderdate,o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when index_recommendations is empty list 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-xq3xuo"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center project-name-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#4583FF"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center database-type-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#15C7D4"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap"
          >
            优化概要
          </h5>
          <div
            class="ant-row"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography"
                  >
                    暂无需要优化的索引
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    height="18"
                    viewBox="0 0 1024 1024"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                      fill="#FF7043"
                    />
                  </svg>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when status is failed 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-xq3xuo"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center project-name-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#4583FF"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center database-type-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#15C7D4"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
            <section
              class="status-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center database-type-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949zM8 10v2M8 4l.004 4.5"
                        stroke="#F59957"
                        stroke-width="1.5"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      调优失败
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap"
          >
            优化概要
          </h5>
          <div
            class="ant-row"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0725431411 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0423139512 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_orderdate,o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when status is optimizing 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-xq3xuo"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center project-name-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#4583FF"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center database-type-space css-cw8mc"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <svg
                      color="#15C7D4"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap"
          >
            优化概要
          </h5>
          <div
            class="ant-row"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        0%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography"
                  >
                    暂无需要优化的索引
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    height="18"
                    viewBox="0 0 1024 1024"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M398.495 365.118c138.97-76.823 29.377-272.875 156.586-280.923C742.605 92.84 655.198 384 655.198 384h117.454c82.783 0 132.925 64.723 112.547 144.562l-67.237 263.425c-11.69 45.8-59.225 82.68-106.25 82.68H448.134c-14.269 0-27.891-2.8-40.343-7.879C384 853.813 384 830.741 384 830.741V401.324s.758-25.168 14.495-36.206M304.19 874.667h-77.18c-35.281 0-66.2-28.501-69.058-63.643l-29.553-363.38C125.54 412.493 151.875 384 187.013 384h117.816c38.863 3.295 36.504 37.732 36.504 37.732v421.12s2.068 28.046-37.143 31.815"
                      fill="#FF7043"
                    />
                  </svg>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;
